--- a/specialSymbols.html
+++ b/specialSymbols.html
@@ -38,7 +38,7 @@
             <!--Adding image-->
             <img 
             src="D:\HTML\Lessons\wallpaperflare.com_wallpaper (1).jpg"
-             alt="Manish is a fucker" 
+             alt="" 
              height="500px" 
              width="500px"
              border="10px">
