--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li>
                 <a href="specialSymbols.html"> Special Symbols</a>
             </li>
+            <li>
+                <a href="task/task.html"> Task</a>
+            </li>
 
         </ul>
     </body>
